--- a/lecture 3/lect/hoza.html
+++ b/lecture 3/lect/hoza.html
@@ -13,7 +13,7 @@
         }
         .myButton {
             background: red;
-            border-color: black;
+            border-color: red;
             border-width: 1px;
             border-radius: 15px;
             color:white;
@@ -24,7 +24,7 @@
             padding-left:12px;
             padding-right:12px;
         }
-        .myInput{
+        .myInput {
             max-width: 50px;
             text-align: center;
             border-radius: 2px;
@@ -40,7 +40,7 @@
     <table>
         <tr>
             <td>
-                <div class="myButton">+</div>
+                <input type="button" class="myButton" value="+"/>
             </td>
             <td>
                 <input type="text" value="1" class="myInput"/>
