--- a/derevishko_homeworks/express/index.html
+++ b/derevishko_homeworks/express/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <script src="./static/vue.min.js" charset="utf-8"></script>
-    <title></title>
+    <title>express</title>
+    <link rel="stylesheet" href="/static/style.css">
   </head>
   <body>
     <div class="wrapper" id='app'>
