--- a/lecture 8/home/index.html
+++ b/lecture 8/home/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="wrapper" id='app'>
       <div class="head">
-      
+        {{last}}
       </div>
       <div class="contener">
         <div class="contener__list-block" @click='edit' >
