--- a/lecture 9/home/index.html
+++ b/lecture 9/home/index.html
@@ -15,6 +15,31 @@
       <li><a href="\insert">Insert Data</a></li>
       <li><a href="\list">List items</a></li>
     </ul>
+    <div class="derevishko">
+      <input type="text" placeholder="name of car" value='' id='name'>
+      <button type="button" id='find'>найті</button>
+      <div id="results">
+        <div></div>
+      </div>
+    </div>
+    <script type="text/javascript">
+      let button = document.getElementById('find');
+      let results = document.getElementById('results');
+      let name = document.getElementById('name');
 
+      button.addEventListener('click',()=>{
+
+        let xhr = new XMLHttpRequest();
+        xhr.open('GET',`derevishko/${name.value}`)
+        xhr.addEventListener('load',() => {
+          let data = JSON.parse(xhr.responseText);
+          data = data.reduce((g,e)=> {
+            return g+= `<h3>${e.name}</h3><p>${e.vin}</p>`
+          },'')
+          results.children[0].innerHTML = data;
+        })
+        xhr.send();
+      })
+    </script>
   </body>
 </html>
