--- a/lecture 9/home/index.html
+++ b/lecture 9/home/index.html
@@ -22,6 +22,12 @@
         <div></div>
       </div>
     </div>
+    <div class="">
+      <button id="copy" type="button" name="button"> dublicate </button>
+      <div id="text">
+
+      </div>
+    </div>
     <script type="text/javascript">
       let button = document.getElementById('find');
       let results = document.getElementById('results');
@@ -41,5 +47,7 @@
         xhr.send();
       })
     </script>
+    <script src="./static/darina.js" charset="utf-8"></script>
+
   </body>
 </html>
