--- a/lecture 9/home/index.html
+++ b/lecture 9/home/index.html
@@ -48,6 +48,9 @@
       })
     </script>
     <script src="./static/darina.js" charset="utf-8"></script>
-
+    <div id="coppppy">
+      dyblirovat
+    </div>
+    <script src="./static/kovtyn.js" charset="utf-8"></script>
   </body>
 </html>
