--- a/lecture 9/home/index.html
+++ b/lecture 9/home/index.html
@@ -48,7 +48,7 @@
       })
     </script>
     <script src="./static/darina.js" charset="utf-8"></script>
-    <div id="coppppy">
+    <div id="copied">
       dyblirovat
     </div>
     <script src="./static/kovtyn.js" charset="utf-8"></script>
