--- a/lecture 9/home/index.html
+++ b/lecture 9/home/index.html
@@ -51,6 +51,6 @@
     <div id="copied">
       dyblirovat
     </div>
-    <script src="./static/kovtyn.js" charset="utf-8"></script>
+    <script src="./static/kovtun.js" charset="utf-8"></script>
   </body>
 </html>
