--- a/lecture 8/home/index.html
+++ b/lecture 8/home/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="contener__redact">
           <textarea name="name" rows="8" cols="80" v-model="text"></textarea>
-          <button type="button" v-if='current' @click='save'>Сохранить</button>
+          <button type="button" v-if='current' @click='save'>Сохранить</button>   <!-- v-if - что оно здесь делает? -->
         </div>
       </div>
     </div>
