--- a/lecture 8/home/index.html
+++ b/lecture 8/home/index.html
@@ -20,6 +20,7 @@
         <div class="contener__redact">
           <textarea name="name" rows="8" cols="80" v-model="text"></textarea>
           <button type="button" v-if='current' @click='save'>Сохранить</button>   <!-- v-if - что оно здесь делает? -->
+          <!-- если  current приводится к true то показывать кнопку, в этом случае если current не пустая строка-->
         </div>
       </div>
     </div>
