--- a/lecture 9/home/index.html
+++ b/lecture 9/home/index.html
@@ -52,5 +52,9 @@
       dyblirovat
     </div>
     <script src="./static/kovtun.js" charset="utf-8"></script>
+    <div>
+      <button type="button" id="delAll" name="deleteAll">delete all documents</button>
+    </div>
+    <script src="./static/vladaf.js" charset="utf-8"></script>
   </body>
 </html>
