--- a/news feed/html/authorization.html
+++ b/news feed/html/authorization.html
@@ -19,15 +19,17 @@
 			<div class="log_in">
 			<span>LOG IN</span>
 			</div>
-			<div class="log_nick">
-			<input>
-			</div>
-			<div class="log_pass">
-			<input>
-			</div>
-			<div class="log_end">
-			<button>LOGIN</button> <a href="link_to_sign_up">create new account<a>
-			</div>
+			<form method="post" action="/">
+				<div class="signup_nick">
+				<input placeholder="Nickname" name="nickname">
+				</div>
+				<div class="signup_pass">
+				<input placeholder="Password" name="password">
+				</div>
+				<div class="signup_end">
+				<button>SIGN UP</button> <a href="/">SIGN UP<a>
+				</div>
+			</form>
 		</div>
 		</div>
 
