--- a/news feed/html/registration.html
+++ b/news feed/html/registration.html
@@ -21,16 +21,15 @@
 			</div>
 			<form method="post" action="/">
 				<div class="signup_nick">
-				<input placeholder="Nickname" name="nickname">
+				<input placeholder="New nickname (5 or more symbols)" name="nickname">
 				</div>
 				<div class="signup_pass">
-				<input placeholder="Password" name="password">
+				<input placeholder="New password (5 or more symbols)" name="password">
 				</div>
 				<div class="signup_end">
-				<button>SIGN UP</button>
+				<button>SIGN UP</button> <a href="/login">LOG IN<a>
 				</div>
 			</form>
-			<a href="link_to_log_in">LOG IN<a>
 		</div>
 		</div>
 
