--- a/news feed/html/authorization.html
+++ b/news feed/html/authorization.html
@@ -19,15 +19,15 @@
 			<div class="log_in">
 			<span>LOG IN</span>
 			</div>
-			<form method="post" action="/">
+			<form method="post" action="/login">
 				<div class="signup_nick">
-				<input placeholder="Nickname" name="nickname">
+				<input placeholder="Nickname" name="yourNickname">
 				</div>
 				<div class="signup_pass">
-				<input placeholder="Password" name="password">
+				<input placeholder="Password" name="yourPassword">
 				</div>
 				<div class="signup_end">
-				<button>SIGN UP</button> <a href="/">SIGN UP<a>
+				<button>SIGN UP</button> <a href="/regist">SIGN UP<a>
 				</div>
 			</form>
 		</div>
