--- a/news feed/html/registration.html
+++ b/news feed/html/registration.html
@@ -19,7 +19,7 @@
 			<div class="sign_up">
 			<span>SIGN UP</span>
 			</div>
-			<form method="post" action="/">
+			<form method="post" action="/regist">
 				<div class="signup_nick">
 				<input placeholder="New nickname (5 or more symbols)" name="nickname">
 				</div>
