--- a/news feed/html/feed.html
+++ b/news feed/html/feed.html
@@ -11,7 +11,7 @@
 			<span class="logo">SNC</span>
 			<div class="user+logout">
 			<span class="user_name">User99</span>
-			<button class="log_out">LOG OUT</button>
+			<a href="authorization.html" class="log_out">LOG OUT</a>
 			</div>
 		</div>
 	
