--- a/news feed/index.html
+++ b/news feed/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>newsfeed</title>
+    <link rel="icon" type="image/x-icon" href="./tech/favicon.ico" />
+    <title>SNC</title>
   </head>
   <body>
     <div id="app"></div>
